--- a/style.css
+++ b/style.css
@@ -891,14 +891,14 @@ background-position-y: -7%;
 .options__display {
   position: relative;
   left: 19.5%;
-  padding-top: 5%;
+  padding-top: 6%;
   margin-bottom: 0;
 }
 
 .options__wifi {
   position: relative;
   margin-bottom: 0;
-  padding-top: 6%;
+  padding-top: 5%;
   left: 18.5%;
 }
 
@@ -914,7 +914,9 @@ background-position-y: -7%;
 }
 
 .more__info {
-  font-size: 18px;
+  font-size: 15px;
+  letter-spacing: 2px;
+  vertical-align: super;
   margin-left: 1%;
   width: 35%;
 }
@@ -927,19 +929,20 @@ background-position-y: -7%;
 
 .more__icon {
   margin-left: 9%;
-  top: 5px;
-  width: 27px;
-  height: 27px;
+  margin-top: 1%;
+  width: 32px;
+  height: 32px;
 }
 
 .more__order {
   width: 217px;
   height: 35px;
-  font-size: 19px;
+  font-size: 17px;
   margin-left: 0;
-  top: -1px;
-  left: 1%;
-  padding-top: 15px;
+  left: 1.4%;
+  padding-top: 2%;
+  letter-spacing: 1px;
+  vertical-align: super;
 }
 }
 
@@ -1371,7 +1374,7 @@ background-position-y: -7%;
 
 .safety {
   position: relative;
-  background-position-y: 13%, 8%;
+  background-position-y: 9.8%, 6.5%;
   background-position-x: -3%, 53%;
   background-size: 96%, 77%;
   background-image:
@@ -1391,7 +1394,7 @@ background-position-y: -7%;
 
 .info-safety {
   width: 100%;
-  display: inline-block;
+  padding-bottom: 27%;
 }
 
 .description {
@@ -1411,7 +1414,7 @@ background-position-y: -7%;
 
 .protection__title {
   width: 70%;
-  margin-bottom: 0;
+  margin-bottom: 43%;
 }
 
 .description__title {
@@ -1430,7 +1433,8 @@ background-position-y: -7%;
 
 .protection__front {
   width: 85%;
-  position: relative;
+  position: absolute;
+  margin-top: -39%
 }
 
 .protection__front_star1 {
@@ -1439,20 +1443,32 @@ background-position-y: -7%;
 
 .protection__side {
   width: 85%;
-  position: relative;
+  position: absolute;
+  margin-top: -30%;
+}
+
+.protection__side_title {
+  padding-top: 2.5%;
 }
 
 .protection__side_star1 {
   margin-left: 8%;
+  margin-top: 1%;
 }
 
 .protection__rack  {
   width: 85%;
-  position: relative;
+  position: absolute;
+  margin-top: -20%;
+}
+
+.protection__rack_title {
+  padding-top: 2%;
 }
 
 .protection__rack_star1 {
-  margin-left: 12%;
+  margin-left: 12.5%;
+  margin-top: 0.9%;
 }
 
 .litle {
@@ -1462,24 +1478,30 @@ background-position-y: -7%;
 
 .protection__driver {
   width: 85%;
-  position: relative;
+  position: absolute;
+  margin-top: -10%;
 }
 
 .protection__driver_star1 {
   margin-left: 3%;
+  margin-top: 0.7%;
 }
 
 .protection__driver_title {
-  font-size: 19px;
+  font-size: 18px;
+  padding-top: 2%;
+  letter-spacing: 1px;
 }
 
 .protection__passangeer {
   width: 85%;
-  position: relative;
+  position: absolute;
+  margin-top: 0%;
+  letter-spacing: 1px;
 }
 
 .protection__passangeer_star1 {
-  margin-left: 4.5%;
+  margin-left: 2.5%;
 }
 
 .more-safety {
@@ -1489,9 +1511,8 @@ background-position-y: -7%;
 
 .more-safety__icon {
   margin-left: 11.6%;
-  width: 27px;
-  height: 27px;
-  top: -5px;
+  width: 32px;
+  height: 32px;
 }
 
 .more-safety__icon::after {
@@ -1504,7 +1525,7 @@ background-position-y: -7%;
   font-size: 18px;
   margin-left: 9.5%;
   width: 25%;
-  top: -8px;
+  vertical-align: super;
 }
 
 .more-safety__order {
@@ -1544,8 +1565,13 @@ background-position-y: -7%;
   margin-bottom: 14%;
 }
 
+.protection__front {
+  margin-top: 1%;
+}
+
 .protection__front_title {
-  padding-top: 8px;
+  letter-spacing: 2px;
+  font-size: 16px;
 }
 
 .protection__front_star1, .protection__side_star1, .protection__rack_star1, .protection__driver_star1, .protection__passangeer_star1 {
@@ -1554,11 +1580,16 @@ background-position-y: -7%;
 }
 
 .protection__side_title {
-  padding-top: 6px;
+  padding-top: 1%;
+  font-size: 17px;
+  letter-spacing: 1px;
 }
 
 .protection__rack_title {
-  padding-top: 6px;
+  padding-top: 1.5%;
+  font-size: 17px;
+  letter-spacing: 1px;
+  margin-right: 6.3%;
 }
 
 .litle {
@@ -1566,15 +1597,19 @@ background-position-y: -7%;
 }
 
 .protection__rack_star1 {
-  margin-left: 8.3%;
 }
 
 .protection__driver_title {
-  padding-top: 6px;
+  padding-top: 1%;
+  font-size: 16px;
+  letter-spacing: 2px;
+  margin-right: 11%;
 }
 
 .protection__passangeer_title {
-  padding-top: 6px;
+  padding-top: 1.5%;
+  font-size: 17px;
+  letter-spacing: 1px;
 }
 
 .protection {
