--- a/style.css
+++ b/style.css
@@ -1155,16 +1155,15 @@ margin-right: 260px;
 
 .protection__front {
   margin-bottom: 1.8%;
-  display: inline-flex;
+  display: flex;
   width: 100%;
-  margin-left: 13%;
+  margin-left: 12%;
 }
 
 .protection__front_title {
   font-family: "montserratregular", arial, helvetica, sans-serif;
   font-size: 18px;
   color: #fff;
-  padding-top: 4px;
   margin-right: 14%;
 }
 
@@ -1174,8 +1173,7 @@ margin-right: 260px;
   height: 25px;
   background-image: url(img/Star.svg);
   background-repeat: no-repeat;
-  display: inline-block;
-  margin-right: 2px;
+  margin-right: 1%;
 }
 
 .protection__front_star2, .protection__front_star3, .protection__front_star4, .protection__front_star5 {
@@ -1183,15 +1181,14 @@ margin-right: 260px;
   height: 25px;
   background-image: url(img/Star.svg);
   background-repeat: no-repeat;
-  display: inline-block;
-  margin: 2px;
+  margin-right: 1%;
 }
 
 .protection__side {
   margin-bottom: 1.8%;
-  display: inline-flex;
+  display: flex;
   width: 100%;
-  margin-left: 13%;
+  margin-left: 12%;
 }
 
 .protection__side_title {
@@ -1207,8 +1204,7 @@ margin-right: 260px;
   height: 25px;
   background-image: url(img/Star.svg);
   background-repeat: no-repeat;
-  display: inline-block;
-  margin-right: 2px;
+  margin-right: 1%;
 }
 
 .protection__side_star2, .protection__side_star3, .protection__side_star4, .protection__side_star5 {
@@ -1216,15 +1212,14 @@ margin-right: 260px;
   height: 25px;
   background-image: url(img/Star.svg);
   background-repeat: no-repeat;
-  display: inline-block;
-  margin: 2px;
+  margin-right: 1%;
 }
 
 .protection__rack {
   margin-bottom: 1.8%;
-  display: inline-flex;
+  display: flex;
   width: 100%;
-  margin-left: 13%;
+  margin-left: 12%;
 }
 
 .litle {
@@ -1236,8 +1231,6 @@ margin-right: 260px;
   font-family: "montserratregular", arial, helvetica, sans-serif;
   font-size: 18px;
   color: #fff;
-  padding-top: 4px;
-  margin-right: -0.3%;
 }
 
 .protection__rack_star1 {
@@ -1245,8 +1238,7 @@ margin-right: 260px;
   height: 25px;
   background-image: url(img/Star.svg);
   background-repeat: no-repeat;
-  display: inline-block;
-  margin-right: 2px;
+  margin-right: 1%;
 }
 
 .protection__rack_star2, .protection__rack_star3, .protection__rack_star4, .protection__rack_star5 {
@@ -1254,22 +1246,20 @@ margin-right: 260px;
   height: 25px;
   background-image: url(img/Star.svg);
   background-repeat: no-repeat;
-  display: inline-block;
-  margin: 2px;
+  margin-right: 1%;
 }
 
 .protection__driver {
   margin-bottom: 1.8%;
-  display: inline-flex;
+  display: flex;
   width: 100%;
-  margin-left: 13%;
+  margin-left: 12%;
 }
 
 .protection__driver_title {
   font-family: "montserratregular", arial, helvetica, sans-serif;
   font-size: 18px;
   color: #fff;
-  padding-top: 4px;
   margin-right: 12%;
 }
 
@@ -1278,8 +1268,7 @@ margin-right: 260px;
   height: 25px;
   background-image: url(img/Star.svg);
   background-repeat: no-repeat;
-  display: inline-block;
-  margin-right: 2px;
+  margin-right: 1%;
 }
 
 .protection__driver_star2, .protection__driver_star3, .protection__driver_star4, .protection__driver_star5 {
@@ -1287,22 +1276,20 @@ margin-right: 260px;
   height: 25px;
   background-image: url(img/Star.svg);
   background-repeat: no-repeat;
-  display: inline-block;
-  margin: 2px;
+  margin-right: 1%;
 }
 
 .protection__passangeer {
   margin-bottom: 1.8%;
-  display: inline-flex;
+  display: flex;
   width: 100%;
-  margin-left: 13%;
+  margin-left: 12%;
 }
 
 .protection__passangeer_title {
   font-family: "montserratregular", arial, helvetica, sans-serif;
   font-size: 18px;
   color: #fff;
-  padding-top: 4px;
   margin-right: 10%;
 }
 
@@ -1311,8 +1298,7 @@ margin-right: 260px;
   height: 25px;
   background-image: url(img/Star.svg);
   background-repeat: no-repeat;
-  display: inline-block;
-  margin-right: 2px;
+  margin-right: 1%;
 }
 
 .protection__passangeer_star2, .protection__passangeer_star3, .protection__passangeer_star4, .protection__passangeer_star5 {
@@ -1320,8 +1306,7 @@ margin-right: 260px;
   height: 25px;
   background-image: url(img/Star.svg);
   background-repeat: no-repeat;
-  display: inline-block;
-  margin: 2px;
+  margin-right: 1%;
 }
 
 .protection {
@@ -1524,15 +1509,13 @@ margin-right: 260px;
 
 .description {
   margin-top: 2%;
-  display: inline-block;
   width: 49%;
   margin-bottom: 0;
 }
 
 .protection {
-  left: -1%;
-  display: inline-block;
   width: 49%;
+  margin-top: 9%;
   position: relative;
   margin-bottom: 0;
 }
@@ -1557,20 +1540,20 @@ margin-right: 260px;
 }
 
 .protection__front {
+  display: flex;
   width: 85%;
   position: absolute;
   margin-top: -40%
 }
 
 .protection__front_title {
-  background-image: url(img/Спереди.svg);
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-color: #E51937;
+  margin-top: 2%;
+  width: 28%;
+  margin-right: 19%;
 }
 
 .protection__front_star1 {
-  margin-left: 6%;
+  margin-right: 1%;
 }
 
 .protection__side {
@@ -1580,12 +1563,14 @@ margin-right: 260px;
 }
 
 .protection__side_title {
-  padding-top: 1.5%;
+  margin-top: 1.5%;
+  padding-top: 0;
+  margin-right: 28%;
+  width: 19%;
 }
 
 .protection__side_star1 {
-  margin-left: 8%;
-  margin-top: 1%;
+  margin-right: 1%;
 }
 
 .protection__rack  {
@@ -1595,12 +1580,14 @@ margin-right: 260px;
 }
 
 .protection__rack_title {
-  padding-top: 2%;
+  width: 35%;
+  padding-top: 0;
+  margin-top: 1.2%;
+  margin-right: 12%;
 }
 
 .protection__rack_star1 {
-  margin-left: 12.5%;
-  margin-top: 0.9%;
+  margin-right: 1%;
 }
 
 .litle {
@@ -1615,13 +1602,13 @@ margin-right: 260px;
 }
 
 .protection__driver_star1 {
-  margin-left: 3%;
-  margin-top: 0.7%;
 }
 
 .protection__driver_title {
+  margin-right: 14.5%;
+  width: 33%;
+  margin-top: 1.5%;
   font-size: 18px;
-  padding-top: 2%;
   letter-spacing: 1px;
 }
 
@@ -1632,8 +1619,14 @@ margin-right: 260px;
   letter-spacing: 1px;
 }
 
-.protection__passangeer_star1 {
-  margin-left: 2.5%;
+.protection__passangeer_title {
+  margin-top: 1%;
+  margin-right: 12.5%;
+  width: 35%;
+}
+
+.opa {
+  display: flex;
 }
 
 .more-safety {
@@ -1670,10 +1663,177 @@ margin-right: 260px;
 }
 }
 
+
+@media (min-width: 769px) and (max-width: 1439px) {
+
+  .description {
+    margin-top: 2%;
+    width: 100%;
+    margin-bottom: 0;
+  }
+
+  .protection {
+    width: 100%;
+    margin-top: 9%;
+    position: relative;
+    margin-bottom: 0;
+  }
+
+  .protection__title {
+    width: 70%;
+    margin-bottom: 44%;
+  }
+
+  .description__title {
+    padding-top: 13%;
+    margin-left: 9%;
+    font-size: 21px;
+  }
+
+  .description__text {
+    letter-spacing: 1.7px;
+    margin-left: 9%;
+    width: 90%;
+    font-size: 14px;
+  }
+
+  .protection__front {
+    display: flex;
+    width: 85%;
+    position: absolute;
+    margin-top: -40%
+  }
+
+  .protection__front_title {
+    font-size: 16px;
+    margin-top: 2%;
+    width: 28%;
+    margin-right: 19%;
+  }
+
+  .protection__front_star1 {
+    margin-right: 1%;
+  }
+
+  .protection__side {
+    width: 85%;
+    position: absolute;
+    margin-top: -30%;
+  }
+
+  .protection__side_title {
+    font-size: 16px;
+    margin-top: 1.5%;
+    padding-top: 0;
+    margin-right: 28%;
+    width: 19%;
+  }
+
+  .protection__side_star1 {
+    margin-right: 1%;
+  }
+
+  .protection__rack  {
+    width: 85%;
+    position: absolute;
+    margin-top: -20%;
+  }
+
+  .protection__rack_title {
+    font-size: 16px;
+    width: 35%;
+    padding-top: 0;
+    margin-top: 1.2%;
+    margin-right: 12%;
+  }
+
+  .protection__rack_star1 {
+    margin-right: 1%;
+  }
+
+  .litle {
+    font-size: 8px;
+    margin-left: 5%;
+  }
+
+  .protection__driver {
+    width: 85%;
+    position: absolute;
+    margin-top: -10.5%;
+  }
+
+  .protection__driver_star1 {
+  }
+
+  .protection__driver_title {
+    font-size: 16px;
+    margin-right: 14.5%;
+    width: 33%;
+    margin-top: 1.5%;
+    letter-spacing: 1px;
+  }
+
+  .protection__passangeer {
+    width: 85%;
+    position: absolute;
+    margin-top: 0%;
+    letter-spacing: 1px;
+  }
+
+  .protection__passangeer_title {
+    font-size: 15px;
+    margin-top: 1%;
+    margin-right: 12.5%;
+    width: 35%;
+  }
+
+.info-safety__result {
+  margin-bottom: 0;
+  width: 75%;
+  background-size: contain;
+}
+
+  .opa {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 14%;
+  }
+
+  .more-safety {
+    padding-bottom: 7.2%;
+  }
+
+  .more-safety__icon {
+    margin-left: 0%;
+    width: 8%;
+    height: 32px;
+  }
+
+
+  .more-safety__info {
+    top: -7px;
+    font-size: 12px;
+    margin-left: 8.5%;
+    width: 43%;
+    vertical-align: super;
+  }
+
+  .more-safety__order {
+    margin-left: 0;
+    width: 28%;
+    height: 35px;
+    top: -8px;
+    font-size: 13px;
+    padding-top: 15px;
+  }
+
+}
+
+
 @media (min-width: 1440px) {
 
 .drive__title {
-  font-size: 33px;
+  font-size: 30px;
 }
 
 .options__wifi {
@@ -1699,31 +1859,38 @@ margin-right: 260px;
 
 .protection__front {
   margin-top: 0%;
+  margin-bottom: 2.5%;
 }
 
 .protection__front_title {
   letter-spacing: 2px;
   padding-top: 1.6%;
   font-size: 16px;
-  margin-right: 13%;
+  margin-right: 14%;
 }
 
 .protection__front_star1, .protection__side_star1, .protection__rack_star1, .protection__driver_star1, .protection__passangeer_star1 {
   position: relative;
-  top: 2px;
+}
+
+.protection__side {
+  margin-bottom: 3%;
 }
 
 .protection__side_title {
   padding-top: 1.5%;
   font-size: 17px;
-  letter-spacing: 1px;
+  letter-spacing: 2px;
+}
+
+.protection__rack {
+  margin-bottom: 2.6%;
 }
 
 .protection__rack_title {
-  padding-top: 1.5%;
   font-size: 17px;
   letter-spacing: 1px;
-  margin-right: 8.3%;
+  margin-right: 9.3%;
 }
 
 .litle {
@@ -1737,13 +1904,21 @@ margin-right: 260px;
   padding-top: 1.5%;
   font-size: 16px;
   letter-spacing: 2px;
-  margin-right: 11%;
+  margin-right: 12%;
 }
 
 .protection__passangeer_title {
   padding-top: 1.5%;
   font-size: 17px;
-  letter-spacing: 1px;
+  letter-spacing: 1.5px;
+}
+
+.protection__driver {
+  margin-bottom: 2.8%;
+}
+
+.info-safety__result {
+  margin-top: 23%;
 }
 
 .protection {
