--- a/style.css
+++ b/style.css
@@ -1891,3 +1891,20 @@ body {
   padding-top: 2%;
 }
 }
+
+@media (min-width: 376px) and (max-width: 550px) {
+  .protection__passangeer_title {
+    font-size: 15px;
+  }
+
+  .protection__driver_title,
+  .protection__rack_title,
+  .protection__side_title,
+  .protection__front_title {
+    font-size: 16px;
+  }
+
+  .litle {
+    font-size: 8px;
+  }
+}
