--- a/fonts.css
+++ b/fonts.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Montserrat';
-  src: url(fonts/'Montserrat-Bold.woff') format('woff');
+  src: url('Montserrat-Bold.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
